--- a/example/index.html
+++ b/example/index.html
@@ -121,7 +121,7 @@
 		<script src='../lib/deps/jquery.js'></script>
 		<script src='../lib/deps/lodash.js'></script>
 		<script src='../lib/deps/backbone.js'></script>
-		<script src='../lib/mast.js'></script>
+		<script src='../dist/mast.dev.js'></script>
 		<!-- /dependencies -->
 
 
