update gruntfile and rebuild.

--- a/example/index.html
+++ b/example/index.html
@@ -118,9 +118,9 @@
 			To allow the framework to finish loading, call Framework.resume( [cb] ).
 			(roughly equivalent to http://api.jquery.com/jQuery.holdReady/)
 		-->
-		<script src='../lib/deps/jquery.js'></script>
-		<script src='../lib/deps/lodash.js'></script>
-		<script src='../lib/deps/backbone.js'></script>
+		<script src='./deps/jquery.js'></script>
+		<script src='./deps/lodash.js'></script>
+		<script src='./deps/backbone.js'></script>
 		<script src='../dist/mast.dev.js'></script>
 		<!-- /dependencies -->
 
